--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
@@ -1,5 +1,5 @@
 = Feature Flags
-:revdate: 2025-08-25
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
 With feature flags, you can try out optional or experimental features, and enable legacy features that are being phased out.
@@ -8,7 +8,6 @@ To learn more about feature values and how to enable them, see xref:rancher-admi
 
 [NOTE]
 ====
-
 Some feature flags require a restart of the Rancher container. Features that require a restart are marked in the Rancher UI.
 ====
 
@@ -27,9 +26,9 @@ The following is a list of feature flags available in Rancher. If you've upgrade
 * `multi-cluster-management`: Allows multi-cluster provisioning and management of Kubernetes clusters. This flag can only be set at install time. It can't be enabled or disabled later.
 * `rke2`: Enables provisioning RKE2 clusters. This flag is enabled by default.
 * `token-hashing`: Enables token hashing. Once enabled, existing tokens will be hashed and all new tokens will be hashed automatically with the SHA256 algorithm. Once a token is hashed it can't be undone. This flag can't be disabled after its enabled. See xref:api/api-tokens.adoc#_token_hashing[API Tokens] for more information.
-* `uiextension`: Enables UI extensions. This flag is enabled by default. Enabling or disabling the flag forces the Rancher pod to restart. The first time this flag is set to `true`, it creates a CRD and enables the controllers and endpoints necessary for the feature to work. If set to `false`, it disables the previously mentioned controllers and endpoints. Setting `uiextension` to `false` has no effect on the CRD -- it does not create a CRD if it does not yet exist, nor does it delete the CRD if it already exists.
-* `unsupported-storage-drivers`: Enables types for storage providers and provisioners that aren't enabled by default. See xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[Allow Unsupported Storage Drivers] for more information.
-* `ui-sql-cache`: Enables a SQLite-based cache for UI tables. See xref:rancher-admin/experimental-features/ui-server-side-pagination.adoc[UI Server-Side Pagination] for more information.
+* `uiextension`: Enables UI extensions. This flag is enabled by default. Enabling or disabling the flag forces the Rancher pod to restart. The first time this flag is set to `Active`, it creates a CRD and enables the controllers and endpoints necessary for the feature to work. If set to `Disabled`, it disables the previously mentioned controllers and endpoints. Setting `uiextension` to `Disabled` has no effect on the CRD -- it does not create a CRD if it does not yet exist, nor does it delete the CRD if it already exists.* `unsupported-storage-drivers`: Enables types for storage providers and provisioners that aren't enabled by default. See xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[Allow Unsupported Storage Drivers] for more information.
+* `ui-sql-cache`: Enables a SQLite-based cache for UI tables. See  for more information.
+* `ui-sql-cache`: Enables an SQLite-based cache for UI tables and Server-Side Pagination. See xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc[UI Server-Side Pagination] for more information.
 
 The following table shows the availability and default values for some feature flags in Rancher. Features marked "GA" are generally available:
 
@@ -37,49 +36,49 @@ The following table shows the availability and default values for some feature f
 | Feature Flag Name | Default Value | Status | Available As Of | Additional Information
 
 | `aggregated-roletemplates`
-| `false`
-| Highly experimentatl
+| `Disabled`
+| Highly experimental
 | v2.11.0
 | This flag value is locked on install and can't be changed.
 
 | `clean-stale-secrets`
-| `true`
+| `Active`
 | GA
 | v2.11.0
 |
 
 | `continuous-delivery`
-| `true`
+| `Active`
 | GA
 | v2.6.0
 |
 
 | `external-rules`
-| v2.7.14: `false`, v2.8.5: `true`
+| v2.7.14: `Disabled`, v2.8.5: `Active`
 | Removed
 | v2.7.14, v2.8.5
 | This flag affected xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_external_roletemplate_behavior[external `RoleTemplate` behavior]. It is removed in Rancher v2.9.0 and later as the behavior is enabled by default.
 
 | `fleet`
-| `true`
+| `Active`
 | Can no longer be disabled
 | v2.6.0
 |
 
 | `fleet`
-| `true`
+| `Active`
 | GA
 | v2.5.0
 |
 
 | `harvester`
-| `true`
+| `Active`
 | Experimental
 | v2.6.1
 |
 
 | `imperative-api-extension`
-| `true`
+| `Active`
 | GA
 | v2.11.0
 |
@@ -103,20 +102,20 @@ The following table shows the availability and default values for some feature f
 |
 
 | `token-hashing`
-| `false` for new installs, `true` for upgrades
+| `Disabled` for new installs, `Active` for upgrades
 | GA
 | v2.6.0
 |
 
 | `uiextension`
-| `true`
+| `Active`
 | GA
 | v2.9.0
 |
 
 | `ui-sql-cache`
-| `false`
-| Highly experimental
+| `Active`
+| GA
 | v2.9.0
 |
 |===
