Updating partial section with rollback warning, and removing EOL version information from rollback pages.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.11/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
+++ b/versions/v2.11/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
@@ -1,9 +1,15 @@
 = 回滚
-:revdate: 2025-03-12
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 :experimental:
 
 本页概述了如何在升级 Rancher 后将 Rancher 回滚到之前的版本。
+
+[WARNING]
+====
+* This is only possible by restoring to a previous version from a backup instance. Changing versions using  kubectl or Helm is not supported.
+* When rolling back, ensure the version being restored is under active support. Rolling back to versions that are end-of-life is not supported.
+====
 
 请在以下情况时按照本页的说明进行操作：
 
@@ -17,48 +23,9 @@
 * 如果你需要还原 Rancher 到同一版本的之前的状态, 请参阅xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc[还原 Rancher].
 ====
 
+== 回滚到 Rancher 2.8.0+
 
-== 特殊场景下的操作
-
-在以下场景中需要执行替代步骤来进行回滚：
-
-* 从 v2.6.4 及更高版本回滚到 v2.6.x 的早期版本。
-* 从 v2.7.7 及更高版本回滚到 v2.7.x 的早期版本。
-
-Rancher v2.6.4 将 cluster-api 模块从 v0.4.4 升级到 v1.0.2。反过来，cluster-api 的 v1.0.2 版本将集群 API 的自定义资源定义 (CRD) 从 `cluster.x-k8s.io/v1alpha4` 升级到 `cluster.x-k8s.io/v1beta1`。当你尝试将 Rancher v2.6.4 回滚到以前版本的 Rancher v2.6.x 时，CRD 升级到 v1beta1 会导致回滚失败。这是因为使用旧 apiVersion (v1alpha4) 的 CRD 与 v1beta1 不兼容。
-
-在 Rancher v2.7.7 版本中，应用 `rancher-provisioning-capi` 会自动安装在上游（本地）集群上，来替代嵌入的 cluster-api 控制器。 如果上游集群同时包含该应用和 Rancher v2.7.6 及更早版本，则会发生冲突和意外错误。 因此，如果你尝试从 Rancher v2.7.7 回滚到 Rancher v2.7.x 的任何早期版本，需要执行替代的步骤。
-
-=== 步骤 1： 清理上游（本地）集群
-
-要避免回滚失败，你需要在尝试恢复操作或回滚**之前**根据该link:https://github.com/rancher/rancher-cleanup/blob/main/README.md[说明]运行以下 Rancher 脚本：
-
-* `cleanup.sh`：清理集群。
-* `verify.sh`：检查集群中是否有任何与 Rancher 相关的资源。
-
-[CAUTION]
-====
-
-`cleanup.sh` 运行的时候会有停机时间，这是因为脚本会删除 Rancher 创建的资源。
-====
-
-
-*结果：* 上游（本地）集群中所有 Rancher 关联的资源将被清理。
-
-请参阅 https://github.com/rancher/rancher-cleanup[rancher/rancher-cleanup 仓库] 以获取更多细节和源码。
-
-=== 步骤 2： 还原备份并启动 Rancher
-
-此时上游集群上应该已经没有 Rancher 相关的资源了。 因此，下一步与将 Rancher 迁移到不包含 Rancher 资源的新集群相同。
-
-按照xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[说明]安装 Rancher-Backup Helm Chart 并恢复 Rancher 到之前的状态。请记住：
-
-. 步骤 3 可以跳过，因为之前安装的 Cert-Manager 应用应该还在上游（本地）集群中。
-. 执行到步骤 4 时，在要回滚到的 local 集群上安装你需要的 Rancher 版本。
-
-== 回滚到 Rancher 2.5.0+
-
-要回滚到 Rancher 2.5.0+，使用 **Rancher 备份**应用并通过备份来恢复 Rancher。
+要回滚到 Rancher 2.8.0+，使用 **Rancher 备份**应用并通过备份来恢复 Rancher。
 
 回滚后，Rancher 必须以较低/较早的版本启动。
 
@@ -148,20 +115,3 @@ helm history rancher -n cattle-system
 ----
 helm rollback rancher 3 -n cattle-system
 ----
-
-== 回滚到 Rancher 2.2-2.4
-
-要回滚到 2.5 之前的 Rancher 版本，参考此处的步骤xref:[恢复备份 -- Kubernetes 安装]。如果恢复 Rancher Server 的集群的某个快照，Rancher 的版本以及状态均会恢复回到快照时的版本和状态。
-
-有关回滚 Docker 安装的 Rancher，请参见xref:[本页]。
-
-[NOTE]
-====
-
-托管集群对其状态具有权威性。因此，恢复 Rancher Server 不会恢复快照后对托管集群进行的工作负载部署或更改。
-====
-
-
-== 回滚到 Rancher 2.0-2.1
-
-我们不再支持回滚到 Rancher 2.0-2.1。回滚到这些版本的说明保留在xref:[此处]，仅用于无法升级到 v2.2 的情况。
