--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/rollbacks.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/rollbacks.adoc
@@ -1,36 +1,31 @@
 = Rollbacks
-:revdate: 2024-09-26
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 :experimental:
 
-== Additional Steps for Rollbacks with Rancher v2.6.4+
+This page outlines how to rollback Rancher to a previous version after an upgrade.
 
-Rancher v2.6.4 upgrades the cluster-api module from v0.4.4 to v1.0.2. Version v1.0.2 of the cluster-api, in turn, upgrades the Cluster API's  Custom Resource Definitions (CRDs) from `cluster.x-k8s.io/v1alpha4` to `cluster.x-k8s.io/v1beta1`. The CRDs upgrade to v1beta1 causes rollbacks to fail when you attempt to move from Rancher v2.6.4 to any previous version of Rancher v2.6.x. This is because CRDs that use the older apiVersion (v1alpha4) are incompatible with v1beta1.
-
-To avoid rollback failure, the following Rancher scripts should be run *before* you attempt a restore operation or rollback:
-
-* `verify.sh`:  Checks for any Rancher-related resources in the cluster.
-* `cleanup.sh`: Cleans up the cluster.
-
-See the https://github.com/rancher/rancher-cleanup[rancher/rancher-cleanup repo] for more details and source code.
-
-[CAUTION]
+[WARNING]
+====
+* This is only possible by restoring to a previous version from a backup instance. Changing versions using  kubectl or Helm is not supported.
+* When rolling back, ensure the version being restored is under active support. Rolling back to versions that are end-of-life is not supported.
 ====
 
-There will be downtime while `cleanup.sh` runs, since the script deletes resources created by Rancher.
+Follow the instructions from this page when:
+
+* The running Rancher instance has been upgraded to a newer version after the backup was made.
+* The upstream (local) cluster is the same as where the backup was made.
+
+[TIP]
 ====
 
+* Follow these steps to xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[migrate Rancher].
+* If you need to restore Rancher to its previous state at the same Rancher version, see the xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc[restore documentation].
+====
 
-=== Rolling back from v2.6.4+ to lower versions of v2.6.x
+== Rolling Back to Rancher v2.8.0+
 
-. Follow these https://github.com/rancher/rancher-cleanup/blob/main/README.md[instructions] to run the scripts.
-. Follow these xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[instructions] to install the rancher-backup Helm chart on the existing cluster and restore the previous state.
- .. Omit Step 3.
- .. When you reach Step 4, install the Rancher v2.6.x version on the local cluster you intend to roll back to.
-
-== Rolling Back to Rancher v2.5.0+
-
-To roll back to Rancher v2.5.0+, use the *Rancher Backups* application and restore Rancher from backup.
+To roll back to Rancher v2.8.0+, use the *Rancher Backups* application and restore Rancher from backup.
 
 Rancher has to be started with the lower/previous version after a rollback.
 
@@ -45,7 +40,7 @@ A restore is performed by creating a Restore custom resource.
 ====
 
 
-=== Create the Restore Custom Resource
+=== Step 1: Create the Restore Custom Resource
 
 . Click *☰ > Cluster Management*.
 . Go to the local cluster and click *Explore*.
@@ -98,7 +93,7 @@ kubectl get pods -n cattle-resources-system
 kubectl logs -n cattle-resources-system -f
 ----
 
-=== Roll back to a previous Rancher version
+=== Step 2: Roll Back to a Previous Rancher Version
 
 Rancher can be rolled back using the Helm CLI. To roll back to the previous version:
 
@@ -120,20 +115,3 @@ When the target revision is determined, perform the rollback. This example will 
 ----
 helm rollback rancher 3 -n cattle-system
 ----
-
-== Rolling Back to Rancher v2.2-v2.4+
-
-To roll back to Rancher before v2.5, follow the procedure detailed here: xref:[Restoring Backups -- Kubernetes installs] Restoring a snapshot of the Rancher server cluster will revert Rancher to the version and state at the time of the snapshot.
-
-For information on how to roll back Rancher installed with Docker, refer to xref:[this page.]
-
-[NOTE]
-====
-
-Managed clusters are authoritative for their state. This means restoring the Rancher server will not revert workload deployments or changes made on managed clusters after the snapshot was taken.
-====
-
-
-== Rolling Back to Rancher v2.0-v2.1
-
-Rolling back to Rancher v2.0-v2.1 is no longer supported. The instructions for rolling back to these versions are preserved xref:[here] and are intended to be used only in cases where upgrading to Rancher v2.2+ is not feasible.
