Add UI images for online and offline instructions

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -28,6 +28,8 @@ Before proceeding, you must have the registration code for your Rancher Manager 
 ==== Rancher UI
 
 . From the Rancher UI, copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* becomes *Active*, and the *Product Name*, *Expiration date* and *Registration mode* are displayed.
++
+image::online-scc-registration.png[]
 
 ==== Helm
 
@@ -54,6 +56,8 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
 . Return to the Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* becomes *Active*, and the *Product Name*, *Expiration date* and *Registration mode* are displayed.
++
+image::offline-scc-registration.png[]
 
 ==== Helm
 
