--- a/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -1,37 +1,41 @@
 = SUSE Customer Center Registration
-:revdate: 2025-08-19
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
-Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime Suite with https://scc.suse.com/home[SUSE Customer Center (SCC)] from the Rancher UI. This will enable you to see your registered systems in SCC under your subscription.
+Since Rancher v2.12.1, SUSE Rancher Prime customers can now register Rancher Manager with [SUSE Customer Center (SCC)](https://scc.suse.com/home). This registration provides access to add-ons, software updates and patches included in your organization's subscriptions.
 
 == Prequsities
 
-Registering your Rancher Manager instance with SUSE Customer Center requires a SUSE account. If you don't have a SUSE account yet, visit the https://scc.suse.com/[SCC home page] to create one.
+* Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, https://www.suse.com/account/create/[create one].
 
-You must also have access to your organization. To join your organization, you may either:
-
-* Ask your organization's administrator to add you to the account. See our https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[documentation] for details.
-* If you know one of your organization's registration codes, enter it when prompted.
+* You must have access to your organization. Ask your organization's administrator to add you to the account. See the https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[SCC documentation] and https://scc.suse.com/docs/help#how-to-add-user[SCC FAQ] for details. If you know your organization's registration code, enter it when prompted.
 
 == Register with SUSE Customer Center
 
-Check the Notification Center (bell icon) in the upper-right corner of your Rancher dashboard for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. 
+From the Rancher UI, go to *Global Settings* > *Registration*. You can also check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*.
 
-You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI.
+You have the option to register your Rancher Manager instance with SCC <<Online Registration,online>> or <<Offline Registration,offline>>.
 
 === Online Registration
 
 You can register online through the Rancher UI or with Helm.
 
+Before proceeding, you must have the registration code for your Rancher Manager subscription on SCC. To get the registration code:
+. Log in to SCC.
+. Navigate to **My Organizations** and click on the organization with your Rancher Manager subscription.
+. Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*.
+
 ==== Rancher UI
 
-. Get the Registration code for your Rancher Manager subscription on SCC. Log in to SCC, navigate to **My Organizations** and click on the organization with the Rancher Manager subscription. 
-. Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*. 
-. Copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. From the Rancher UI, copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* becomes *Active*, and the *Product Name*, *Expiration date* and *Registration mode* are displayed.
++
+image::online-scc-registration.png[]
 
 ==== Helm
 
-In `values.yaml`, enable registration and add your registration code.
+After you have your registration code, you can register your Rancher Manager instance through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
+
+You can also update `values.yaml`,  enabling registration and adding your registration code.
 
 [,yaml]
 ----
@@ -46,23 +50,33 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 
 ==== Rancher UI
 
-. Click *Download registration request* to download the registration request file.
+. From the Rancher UI, click *Download registration request* to download the registration request file.
 . Click *Visit SCC* to use the SCC offline registration tool. 
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
-. Return to your Rancher Manager UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. Return to the Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* becomes *Active*, and the *Product Name*, *Expiration date* and *Registration mode* are displayed.
++
+image::offline-scc-registration.png[]
 
 ==== Helm
 
-. In `values.yaml`, enable registration and set the `mode` to `offline`.
+. In `values.yaml`, enable registration, comment out `regCode` and set the `mode` to `offline`.
 +
 [,yaml]
 ----
 registration:
   enabled: true
-  regCode: ""
+  # regCode: ""
   mode: offline
+----
+
+. Run the Helm install command `helm install rancher rancher-prime/rancher` and verify installation is successful. 
+. Before proceeding, use the following Bash command to check that the SCC-Operator has successfully created a secret in the `cattle-scc-system` namespace. After the secret is created, it outputs  `Secret created!`.
++
+[,bash]
+----
+for i in {1..100}; do kubectl wait --for=create secret/scc-registration -n cattle-scc-system --timeout=3s &> /dev/null && echo "Secret created!" && break || { echo "Not ready yet..."; sleep 3; }; done
 ----
 
 . Using `kubectl`, retrieve the registration request file and save it locally.
@@ -79,7 +93,7 @@ kubectl get secrets -n  cattle-scc-system \
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
-. Upload the registration certificate file to your Rancher system using `kubectl` or Helm.
+. Upload the registration certificate file to your Rancher Manager instance using `kubectl` or Helm.
 
 * *`kubectl`:*
 +
