--- a/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -2,7 +2,7 @@
 :revdate: 2025-08-27
 :page-revdate: {revdate}
 
-Since Rancher v2.12.1, SUSE Rancher Prime customers can now register Rancher Manager with [SUSE Customer Center (SCC)](https://scc.suse.com/home). This registration provides access to add-ons, software updates and patches included in your organization's subscriptions.
+Since Rancher v2.12.1, SUSE Rancher Prime customers can now register Rancher Manager with https://scc.suse.com/home[SUSE Customer Center (SCC)]. This registration provides access to add-ons, software updates and patches included in your organization's subscriptions.
 
 == Prequsities
 
