Updating en section for latest/v2.12
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/security/compliance-scans/configuration-reference.adoc
+++ b/versions/latest/modules/en/pages/security/compliance-scans/configuration-reference.adoc
@@ -1,18 +1,18 @@
 = Configuration
-:revdate: 2024-09-23
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
-This configuration reference is intended to help you manage the custom resources created by the `rancher-cis-benchmark` application. These resources are used for performing CIS scans on a cluster, skipping tests, setting the test profile that will be used during a scan, and other customization.
+This configuration reference is intended to help you manage the custom resources created by the `rancher-compliance` application. These resources are used for performing compliance scans on a cluster, skipping tests, setting the test profile that will be used during a scan, and other customization.
 
-To configure the custom resources, go to the *Cluster Dashboard* To configure the CIS scans,
+To configure the custom resources, go to the *Cluster Dashboard* To configure the compliance scans,
 
 . In the upper left corner, click *☰ > Cluster Management*.
-. On the *Clusters* page, go to the cluster where you want to configure CIS scans and click *Explore*.
-. In the left navigation bar, click *CIS Benchmark*.
+. On the *Clusters* page, go to the cluster where you want to configure compliance scans and click *Explore*.
+. In the left navigation bar, click *Compliance*.
 
 == Scans
 
-A scan is created to trigger a CIS scan on the cluster based on the defined profile. A report is created after the scan is completed.
+A scan is created to trigger a compliance scan on the cluster based on the defined profile. A report is created after the scan is completed.
 
 When configuring a scan, you need to define the name of the scan profile that will be used with the `scanProfileName` directive.
 
@@ -20,7 +20,7 @@ An example ClusterScan custom resource is below:
 
 [,yaml]
 ----
-apiVersion: cis.cattle.io/v1
+apiVersion: compliance.cattle.io/v1
 kind: ClusterScan
 metadata:
   name: rke-cis
@@ -30,12 +30,12 @@ spec:
 
 == Profiles
 
-A profile contains the configuration for the CIS scan, which includes the benchmark version to use and any specific tests to skip in that benchmark.
+A profile contains the configuration for the compliance scan, which includes the benchmark version to use and any specific tests to skip in that benchmark.
 
 [CAUTION]
 ====
 
-By default, a few ClusterScanProfiles are installed as part of the `rancher-cis-benchmark` chart. If a user edits these default benchmarks or profiles, the next chart update will reset them back. So it is advisable for users to not edit the default  ClusterScanProfiles.
+By default, a few ClusterScanProfiles are installed as part of the `rancher-compliance` chart. If a user edits these default benchmarks or profiles, the next chart update will reset them back. So it is advisable for users to not edit the default  ClusterScanProfiles.
 ====
 
 
@@ -49,12 +49,12 @@ An example `ClusterScanProfile` is below:
 
 [,yaml]
 ----
-apiVersion: cis.cattle.io/v1
+apiVersion: compliance.cattle.io/v1
 kind: ClusterScanProfile
 metadata:
   annotations:
     meta.helm.sh/release-name: clusterscan-operator
-    meta.helm.sh/release-namespace: cis-operator-system
+    meta.helm.sh/release-namespace: compliance-operator-system
   labels:
     app.kubernetes.io/managed-by: Helm
   name: "<example-profile>"
@@ -69,9 +69,9 @@ spec:
 
 A benchmark version is the name of benchmark to run using `kube-bench`, as well as the valid configuration parameters for that benchmark.
 
-A `ClusterScanBenchmark` defines the CIS `BenchmarkVersion` name and test configurations. The `BenchmarkVersion` name is a parameter provided to the `kube-bench` tool.
+A `ClusterScanBenchmark` defines the compliance `BenchmarkVersion` name and test configurations. The `BenchmarkVersion` name is a parameter provided to the `kube-bench` tool.
 
-By default, a few `BenchmarkVersion` names and test configurations are packaged as part of the CIS scan application. When this feature is enabled, these default BenchmarkVersions will be automatically installed and available for users to create a ClusterScanProfile.
+By default, a few `BenchmarkVersion` names and test configurations are packaged as part of the compliance scan application. When this feature is enabled, these default BenchmarkVersions will be automatically installed and available for users to create a ClusterScanProfile.
 
 [CAUTION]
 ====
@@ -90,12 +90,12 @@ An example `ClusterScanBenchmark` is below:
 
 [,yaml]
 ----
-apiVersion: cis.cattle.io/v1
+apiVersion: compliance.cattle.io/v1
 kind: ClusterScanBenchmark
 metadata:
   annotations:
     meta.helm.sh/release-name: clusterscan-operator
-    meta.helm.sh/release-namespace: cis-operator-system
+    meta.helm.sh/release-namespace: compliance-operator-system
   creationTimestamp: "2020-08-28T18:18:07Z"
   generation: 1
   labels:
