--- a/versions/latest/modules/en/pages/security/compliance-scans/install-rancher-compliance.adoc
+++ b/versions/latest/modules/en/pages/security/compliance-scans/install-rancher-compliance.adoc
@@ -1,15 +1,15 @@
-= Install {rancher-product-name} CIS Benchmark
-:revdate: 2024-09-27
+= Install {rancher-product-name} Compliance
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 :experimental:
 
 . In the upper left corner, click *☰ > Cluster Management*.
-. On the *Clusters* page, go to the cluster where you want to install CIS Benchmark and click *Explore*.
-. In the left navigation bar, click menu:Apps[Charts].
-. Click *CIS Benchmark*
+. On the *Clusters* page, go to the cluster where you want to install Compliance and click *Explore*.
+. In the left navigation bar, click *Apps > Charts*.
+. Click *Compliance*
 . Click *Install*.
 
-*Result:* The CIS scan application is deployed on the Kubernetes cluster.
+*Result:* The compliance scan application is deployed on the Kubernetes cluster.
 
 [NOTE]
 ====
