--- a/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
@@ -1,10 +1,10 @@
-= CIS Scans
-:revdate: 2025-08-05
+= Compliance Scans
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
-Rancher can run a security scan to check whether Kubernetes is deployed according to security best practices as defined in the CIS Kubernetes Benchmark. The CIS scans can run on any Kubernetes cluster, including hosted Kubernetes providers such as EKS, AKS, and GKE.
+Rancher can run a security scan to check whether a cluster is deployed according to security best practices as defined in Kubernetes security benchmarks, such as the ones provided by STIG, BSI or CIS. The Compliance scans can run on any Kubernetes cluster, including hosted Kubernetes providers such as EKS, AKS, and GKE.
 
-The `rancher-cis-benchmark` app leverages https://github.com/aquasecurity/kube-bench[kube-bench,] an open-source tool from Aqua Security, to check clusters for CIS Kubernetes Benchmark compliance. Also, to generate a cluster-wide report, the application utilizes https://github.com/vmware-tanzu/sonobuoy[Sonobuoy] for report aggregation.
+The `rancher-compliance` app leverages https://github.com/aquasecurity/kube-bench[kube-bench,] an open-source tool from Aqua Security, to check the compliance of clusters against Kubernetes Benchmarks. Also, to generate a cluster-wide report, the application utilizes https://github.com/vmware-tanzu/sonobuoy[Sonobuoy] for report aggregation.
 
 == About the CIS Benchmark
 
@@ -114,7 +114,7 @@ In order to pass the "Hardened" profile, you will need to follow the steps on th
 
 The default profile and the supported CIS benchmark version depends on the type of cluster that will be scanned:
 
-The `rancher-cis-benchmark` supports the CIS 1.6 Benchmark version.
+The `rancher-compliance` supports the CIS 1.6 Benchmark version.
 
 * For RKE Kubernetes clusters, the RKE Permissive 1.6 profile is the default.
 * EKS and GKE have their own CIS Benchmarks published by `kube-bench`. The corresponding test profiles are used by default for those clusters.
@@ -123,15 +123,13 @@ The `rancher-cis-benchmark` supports the CIS 1.6 Benchmark version.
 
 == About Skipped and Not Applicable Tests
 
-For a list of skipped and not applicable tests, refer to xref:security/cis-scans/skip-tests.adoc[this page].
-
 For now, only user-defined skipped tests are marked as skipped in the generated report.
 
 Any skipped tests that are defined as being skipped by one of the default profiles are marked as not applicable.
 
 == Roles-based Access Control
 
-For information about permissions, refer to xref:security/cis-scans/rbac-for-cis-scans.adoc[this page]
+For information about permissions, refer to xref:security/cis-scans/rbac-for-compliance-scans.adoc[this page]
 
 == Configuration
 
@@ -139,4 +137,4 @@ For more information about configuring the custom resources for the scans, profi
 
 == How-to Guides
 
-Please refer to the xref:security/cis-scans/how-to.adoc[CIS Scan Guides] to learn how to run CIS scans.
+Please refer to the xref:security/compliance-scans/how-to.adoc[Compliance Scan Guides] to learn how to run compliance scans.
