--- a/versions/v2.12/modules/en/pages/security/compliance-scans/create-a-custom-compliance-version-to-run.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/create-a-custom-compliance-version-to-run.adoc
@@ -1,9 +1,9 @@
-= Create a Custom Benchmark Version for Running a Cluster Scan
-:revdate: 2025-08-05
+= Create a Custom Compliance Version for Running a Cluster Scan
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
-There could be some Kubernetes cluster setups that require custom configurations of the Benchmark tests. For example, the path to the Kubernetes config files or certs might be different than the standard location where the upstream CIS Benchmarks look for them.
+There could be some Kubernetes cluster setups that require custom configurations of the Compliance tests. For example, the path to the Kubernetes config files or certs might be different than the standard location where the upstream Compliance look for them.
 
-It is now possible to create a custom Benchmark Version for running a cluster scan using the `rancher-cis-benchmark` application.
+It is now possible to create a custom compliance version for running a cluster scan using the `rancher-compliance` application.
 
-For details, see xref:security/cis-scans/custom-benchmark.adoc[this page.]
+For details, see xref:security/compliance-scans/custom-benchmark.adoc[this page.]
