--- a/versions/v2.12/modules/en/pages/security/compliance-scans/custom-benchmark.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/custom-benchmark.adoc
@@ -1,18 +1,20 @@
 = Creating a Custom Benchmark Version for Running a Cluster Scan
-:revdate: 2025-08-05
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 :experimental:
 
-Each Benchmark Version defines a set of test configuration files that define the CIS tests to be run by the https://github.com/aquasecurity/kube-bench[kube-bench] tool.
-The `rancher-cis-benchmark` application installs a few default Benchmark Versions which are listed under CIS Benchmark application menu.
+Each Benchmark Version defines a set of test configuration files that define the Compliance tests to be run by the https://github.com/aquasecurity/kube-bench[kube-bench] tool.
+The `rancher-compliance` application installs a few default Benchmark Versions which are listed under Compliance Benchmark application menu.
 
 But there could be some Kubernetes cluster setups that require custom configurations of the Benchmark tests. For example, the path to the Kubernetes config files or certs might be different than the standard location where the upstream CIS Benchmarks look for them.
 
-It is now possible to create a custom Benchmark Version for running a cluster scan using the `rancher-cis-benchmark` application.
+But in the following cases, a custom configuration or remediation may be required:
 
-When a cluster scan is run, you need to select a Profile which points to a specific Benchmark Version.
+* Non-standard file locations: When Kubernetes binaries, configuration or certificate paths deviate from upstream benchmark defaults.
+Example: Unlike traditional Kubernetes, K3s bundles control plane components into a single binary. Therefore,` --anonymous-auth` flag presence and configuration should be verified in K3s' logs (`journalctl`), not via `kube-apiserver` process checks (`ps`).
 
-Follow all the steps below to add a custom Benchmark Version and run a scan using it.
+* Alternative risk mitigations: If a setup doesn't meet a check but has an equally effective compensating control with justification. Or simply is not concerned by the check requirement because of its design.
+Example: By default, K3s embeds the api server within the k3s process. There is no API server pod specification file, so verifying the latter's file permissions is not required.
 
 == 1. Prepare the Custom Benchmark Version ConfigMap
 
@@ -46,7 +48,7 @@ To prepare a custom benchmark version ConfigMap, suppose we want to add a custom
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, go to the cluster where you want to add a custom benchmark and click *Explore*.
-. In the left navigation bar, click menu:CIS Benchmark[Benchmark Version].
+. In the left navigation bar, click *Compliance > Benchmark Version*.
 . Click *Create*.
 . Enter the *Name* and a description for your custom benchmark version.
 . Choose the cluster provider that your benchmark version applies to.
@@ -60,7 +62,7 @@ To run a scan using your custom benchmark version, you need to add a new Profile
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, go to the cluster where you want to add a custom benchmark and click *Explore*.
-. In the left navigation bar, click menu:CIS Benchmark[Profile].
+. In the left navigation bar, click *Compliance > Scan*.
 . Click *Create*.
 . Provide a *Name* and description. In this example, we name it `foo-profile`.
 . Choose the Benchmark Version from the dropdown.
