--- a/versions/latest/modules/en/pages/security/compliance-scans/how-to.adoc
+++ b/versions/latest/modules/en/pages/security/compliance-scans/how-to.adoc
@@ -1,13 +1,12 @@
 = CIS Scan Guides
-:revdate: 2024-09-23
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
-* xref:security/cis-scans/install-rancher-cis-benchmark.adoc[Install rancher-cis-benchmark]
-* xref:security/cis-scans/uninstall-rancher-cis-benchmark.adoc[Uninstall rancher-cis-benchmark]
-* xref:security/cis-scans/run-a-scan.adoc[Run a Scan]
-* xref:security/cis-scans/run-a-scan-periodically-on-a-schedule.adoc[Run a Scan Periodically on a Schedule]
-* xref:security/cis-scans/skip-tests.adoc[Skip Tests]
-* xref:security/cis-scans/view-reports.adoc[View Reports]
-* xref:security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc[Enable Alerting for rancher-cis-benchmark]
-* xref:security/cis-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc[Configure Alerts for Periodic Scan on a Schedule]
-* xref:security/cis-scans/create-a-custom-benchmark-version-to-run.adoc[Create a Custom Benchmark Version to Run]
+* xref:security/compliance-scans/install-rancher-compliance.adoc[Install rancher-compliance]
+* xref:security/compliance-scans/uninstall-rancher-compliance.adoc[Uninstall rancher-compliance]
+* xref:security/compliance-scans/run-a-scan.adoc[Run a Scan]
+* xref:security/compliance-scans/run-a-scan-periodically-on-a-schedule.adoc[Run a Scan Periodically on a Schedule]
+* xref:security/compliance-scans/view-reports.adoc[View Reports]
+* xref:security/compliance-scans/enable-alerting-for-rancher-compliance.adoc[Enable Alerting for rancher-compliance]
+* xref:security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc[Configure Alerts for Periodic Scan on a Schedule]
+* xref:security/compliance-scans/create-a-custom-compliance-version-to-run.adoc[Create a Custom Compliance Version to Run]
