--- a/versions/v2.12/modules/en/pages/security/compliance-scans/enable-alerting-for-rancher-compliance.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/enable-alerting-for-rancher-compliance.adoc
@@ -1,5 +1,5 @@
-= Enable Alerting for {rancher-product-name} CIS Benchmark
-:revdate: 2025-08-05
+= Enable Alerting for {rancher-product-name} Compliance
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
 Alerts can be configured to be sent out for a scan that runs on a schedule.
@@ -8,13 +8,13 @@ Alerts can be configured to be sent out for a scan that runs on a schedule.
 .Prerequisite:
 ====
 
-Before enabling alerts for `rancher-cis-benchmark`, make sure to install the `rancher-monitoring` application and configure the Receivers and Routes. For more information, see xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[this section.]
+Before enabling alerts for `rancher-compliance`, make sure to install the `rancher-monitoring` application and configure the Receivers and Routes. For more information, see xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[this section.]
 
-While configuring the routes for `rancher-cis-benchmark` alerts, you can specify the matching using the key-value pair `job: rancher-cis-scan`. An example route configuration is xref:observability/monitoring-and-dashboards/configuration/receivers.adoc#_example_route_config_for_cis_scan_alerts[here.]
+While configuring the routes for `rancher-compliance` alerts, you can specify the matching using the key-value pair `job: rancher-compliance-scan`. An example route configuration is xref:observability/monitoring-and-dashboards/configuration/receivers.adoc#_example_route_config_for_cis_scan_alerts[here.]
 ====
 
 
-While installing or upgrading the `rancher-cis-benchmark` Helm chart, set the following flag to `true` in the `values.yaml`:
+While installing or upgrading the `rancher-compliance` Helm chart, set the following flag to `true` in the `values.yaml`:
 
 [,yaml]
 ----
