--- a/versions/v2.12/modules/en/pages/security/compliance-scans/run-a-scan-periodically-on-a-schedule.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/run-a-scan-periodically-on-a-schedule.adoc
@@ -1,14 +1,14 @@
 = Run a Scan Periodically on a Schedule
-:revdate: 2025-08-05
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 :experimental:
 
 To run a ClusterScan on a schedule,
 
 . In the upper left corner, click *☰ > Cluster Management*.
-. On the *Clusters* page, go to the cluster where you want to run a CIS scan and click *Explore*.
-. Click menu:CIS Benchmark[Scan].
-. Choose a cluster scan profile. The profile determines which CIS Benchmark version will be used and which tests will be performed. If you choose the Default profile, then the CIS Operator will choose a profile applicable to the type of Kubernetes cluster it is installed on.
+. On the *Clusters* page, go to the cluster where you want to run a Compliance scan and click *Explore*.
+. Click *Compliance > Scan*.
+. Choose a cluster scan profile. The profile determines which Compliance version will be used and which tests will be performed. If you choose the Default profile, then the Compliance Operator will choose a profile applicable to the type of Kubernetes cluster it is installed on.
 . Choose the option *Run scan on a schedule*.
 . Enter a valid https://en.wikipedia.org/wiki/Cron#CRON_expression[cron schedule expression] in the field *Schedule*.
 . Choose a *Retention* count, which indicates the number of reports maintained for this recurring scan. By default this count is 3. When this retention limit is reached, older reports will get purged.
