--- a/versions/v2.12/modules/en/pages/security/compliance-scans/uninstall-rancher-compliance.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/uninstall-rancher-compliance.adoc
@@ -1,10 +1,10 @@
-= Uninstall {rancher-product-name} CIS Benchmark
-:revdate: 2025-08-05
+= Uninstall {rancher-product-name} Compliance
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 :experimental:
 
-. From the *Cluster Dashboard,* go to the left navigation bar and click menu:Apps[Installed Apps].
-. Go to the `cis-operator-system` namespace and check the boxes next to `rancher-cis-benchmark-crd` and `rancher-cis-benchmark`.
+. From the *Cluster Dashboard,* go to the left navigation bar and click *Apps > Installed Apps*.
+. Go to the `compliance-operator-system` namespace and check the boxes next to `rancher-compliance-crd` and `rancher-compliance`.
 . Click *Delete* and confirm *Delete*.
 
-*Result:* The `rancher-cis-benchmark` application is uninstalled.
+*Result:* The `rancher-compliance` application is uninstalled.
