Updating phrasing after review
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/shared/modules/ROOT/partials/en/api-support-warning.adoc
+++ b/shared/modules/ROOT/partials/en/api-support-warning.adoc
@@ -1,4 +1,4 @@
 [WARNING]
 ====
-The v3 Norman API is no longer supported and backwards compatibility is not guaranteed.
+The v3 API is not supported and backwards compatibility is not guaranteed.
 ====
