--- a/versions/latest/modules/zh/pages/api/v3-rancher-api-guide.adoc
+++ b/versions/latest/modules/zh/pages/api/v3-rancher-api-guide.adoc
@@ -6,7 +6,7 @@ include::shared:ROOT:partial$zh/api-support-warning.adoc[]
 
 == 如何使用 API
 
-Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API), which is the supported Rancher API now.
+Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API), which is Rancher's supported API. This page describes the v3 API. For more information on RK-API, see the xref:api/quickstart.adoc[RK-API quickstart] and xref:api/reference.adoc[reference guide].
 
 API 有自己的用户界面，你可以从 Web 浏览器访问它。这是查看资源、执行操作以及查看等效 cURL 或 HTTP 请求和响应的一种简单的方法。要访问它：
 
