--- a/versions/v2.9/modules/en/pages/api/v3-rancher-api-guide.adoc
+++ b/versions/v2.9/modules/en/pages/api/v3-rancher-api-guide.adoc
@@ -4,7 +4,7 @@
 
 include::shared:ROOT:partial$en/api-support-warning.adoc[]
 
-Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API), which is the supported Rancher API now. This page describes the v3 API. For more information on RK-API, see the xref:api/quickstart.adoc[RK-API quickstart] and xref:api/reference.adoc[reference guide].
+Rancher v2.8.0 introduced the Rancher Kubernetes API (RK-API), which is Rancher's supported API. This page describes the v3 API. For more information on RK-API, see the xref:api/quickstart.adoc[RK-API quickstart] and xref:api/reference.adoc[reference guide].
 
 == How to Use the API
 
