--- a/versions/v2.12/modules/zh/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.12/modules/zh/pages/rancher-admin/scc-registration.adoc
@@ -1,8 +1,8 @@
 = SUSE Customer Center Registration
-:revdate: 2025-08-26
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
-Since Rancher v2.12.1, SUSE Rancher Prime customers can now register Rancher Manager with https://scc.suse.com/home[SUSE Customer Center (SCC)]. This registration provides access to add-ons, software updates and patches included in your organization's subscriptions.
+Since Rancher v2.12.1, SUSE Rancher Prime customers can now register Rancher Manager with https://scc.suse.com/home[SUSE Customer Center (SCC)]. This registration helps you track the use of your organization's subscriptions and deployed Rancher Manager instances.
 
 == Prequsities
 
