--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -120,6 +120,7 @@
 **** xref:rancher-admin/users/settings/manage-cloud-credentials.adoc[]
 ** Global Configuration
 *** xref:rancher-admin/global-configuration/custom-branding.adoc[]
+*** xref:rancher-admin/global-configuration/notification-center.adoc[]
 *** xref:rancher-admin/global-configuration/global-default-private-registry.adoc[]
 *** xref:rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc[]
 **** xref:rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc[]
