Apply suggestions from code review
Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/configure-oidc-provider.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/configure-oidc-provider.adoc
@@ -3,7 +3,7 @@
 :page-revdate: {revdate}
 
 Rancher can function as a standard OpenID Connect (OIDC) provider, allowing external applications to use Rancher for authentication.
-This can be used for enabling single sign-on (SSO) across Rancher Prime components. For example, see the https://documentation.suse.com/cloudnative/suse-observability/next/en/setup/security/authentication/oidc.html[documentation] for configuring the OIDC provider for SUSE Observability.
+This can be used for enabling single sign-on (SSO) across Rancher Prime components. For example, see the https://documentation.suse.com/cloudnative/suse-observability/latest/en/setup/security/authentication/oidc.html[documentation] for configuring the OIDC provider for SUSE Observability.
 
 The OIDC provider can be enabled with the `oidc-provider` feature flag. When this flag is on the following endpoints are available:
 
@@ -79,7 +79,7 @@ secret-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 You can now use this client ID and client secret in your OIDC client application.
 
-=== Managing Client Secrets
+==== Managing Client Secrets
 
 You can manage multiple client secrets per `OIDCClient`. Use annotations on the `OIDCClient` resource to perform secret operations:
 
@@ -96,7 +96,7 @@ Create an OIDCClient:
 . Click **Add Application**. Fill out the **Create OIDC App** form.
 . Click **Add Application**.
 
-=== Managing Client Secrets
+==== Managing Client Secrets
 
 In the OIDC App page:
 
