--- a/versions/v2.12/modules/zh/nav.adoc
+++ b/versions/v2.12/modules/zh/nav.adoc
@@ -49,7 +49,6 @@
 *** xref:installation-and-upgrade/infrastructure-setup/mysql-database-in-amazon-rds.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/amazon-elb-load-balancer.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/configure-layer-7-nginx-load-balancer.adoc[]
-*** xref:installation-and-upgrade/infrastructure-setup/configure-oidc-provider.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/nginx-load-balancer.adoc[]
 ** xref:installation-and-upgrade/install-kubernetes/install-kubernetes.adoc[]
 *** xref:installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc[]
@@ -91,6 +90,7 @@
 **** External Authentication
 ***** xref:rancher-admin/users/authn-and-authz/jwt-authentication.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc[]
+***** xref:rancher-admin/users/authn-and-authz/configure-oidc-provider.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc[]
 ***** xref:rancher-admin/users/authn-and-authz/configure-azure-ad.adoc[]
