--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/gce/gce.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/gce/gce.adoc
@@ -1,8 +1,8 @@
 = Creating a Google Compute Engine cluster
-:revdate: 2025-08-26
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
-In this section, you'll learn how to use Rancher to provision an https://documentation.suse.com/cloudnative/rke2/[RKE2] Kubernetes cluster on the Google Cloud Platform (GCP) using Google Compute Engine (GCE) through Rancher.
+In this section, you'll learn how to use Rancher to provision an https://documentation.suse.com/cloudnative/rke2/[RKE2] or https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster on the Google Cloud Platform (GCP) using Google Compute Engine (GCE) through Rancher.
 
 First, you will enable the GCE node driver in the Rancher UI. Then, you follow the steps to create a GCP service account with the necessary permissions, and generate a JSON key file. This key file will be used to create a cloud credential in Rancher. 
 
@@ -53,7 +53,7 @@ The GCE node driver is not enabled by default in Rancher. You must enable it bef
 . Enter a **Cluster Name**.
 . Create a machine pool for each Kubernetes role. Refer to the [best practices](use-new-nodes-in-an-infra-provider.md#node-roles) for recommendations on role assignments and counts.
 .. For each machine pool, define the machine configuration. Refer to the xref:cluster-deployment/infra-providers/gce/machine-configuration.adoc[Google GCE machine configuration reference] for information on configuration options.
-. Use the **Cluster Configuration** to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference].
+. Use the **Cluster Configuration** to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2] and xref:cluster-deployment/configuration/k3s.adoc[K3s] cluster configuration references.
 . Use **Member Roles** to configure user authorization for the cluster. Click **Add Member** to add users that can access the cluster. Use the **Role** drop-down to set permissions for each user.
 . Click **Create**.
 
